<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.device.DeviceList">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/empty_list_message"
        />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_bluetooth_white_24dp" />

    <com.sakurateams.attendancesystem.view.RecyclerViewProgressEmptySupport
        android:id="@+id/list"
        android:name="com.sakurateams.bluepair.DeviceFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.sakurateams.bluepair.DeviceFragment"
        tools:listitem="@layout/list_device_item" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        >
        <TextView
            android:id="@+id/copyright"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:text="@string/creativenation_copyright"
            android:textSize="12dp"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/creativenation"
            android:textSize="12dp"
            android:layout_marginLeft="0dp"
            android:layout_toRightOf="@id/copyright"
            android:textColor="@android:color/black"
            />

    </RelativeLayout>

</FrameLayout>